--- a/web/package.json
+++ b/web/package.json
@@ -10,13 +10,13 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2",
-    "@fontsource/roboto": "^4.5.3"
+    "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@vitejs/plugin-react": "^1.2.0",
+    "sass": "^1.49.9",
     "vite": "^2.8.6"
   }
 }
