embed Country.mmdb

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 cmd/masky-client/masky-client
 cmd/masky-server/masky-server
-/masky-client
-/masky-server
+masky-client
+masky-server
 *.mmdb
+!internal/geoip/Country.mmdb
