--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 cmd/masky-client/masky-client
 cmd/masky-server/masky-server
-/masky-client
-/masky-server
+masky-client
+masky-server
 *.mmdb
-/.direnv
+!internal/geoip/Country.mmdb
+.direnv
